Fix : square size on small screens

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -232,7 +232,7 @@ main {
     left: 50%; 
     transform: translateX(-50%);
 }
-.content-point .square {
+.content-point .square{
     width: 400px;
     height: 300px;
     padding: 20px;
@@ -251,39 +251,44 @@ main {
     overflow: hidden;
 }
 
-
-@media (max-width: 768px) {
-    .content-point .square {
-        width: 100%; 
-        margin-left: 0; 
-        padding: 10px; 
-    }
-    .content-point .square h3{
-        font-size: 24px;
-        margin-top: 0;
-        margin-bottom: 10px;
-    }
-    .content-point .square p{
-        font-size: 14px;
-        line-height: 1.4;
+@media (max-width:1000px){
+    .content-point .square{
+        margin-top: 60px;
+        margin-left: 0px;
+        width: 400px;
+        height: 230px; 
     }
 }
+        
 
 
-@media (max-width: 480px) {
-    .content-point .square {
-        padding: 5px; 
-    }
-    .content-point .square h3{
-        font-size: 20px;
-        margin-bottom: 5px;
-    }
-    .content-point .square p{
-        font-size: 12px;
-        line-height: 1.3;
-    }
+.content-point .right-square {
+    width: 400px;
+    height: 300px;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
+    margin-left: 640px; 
+    color: #292929;
+    font-family: 'Roboto', 'Helvetica', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    border-radius: 20px;
+    overflow: hidden;
 }
 
+@media (max-width:1000px){
+    .content-point .right-square{
+        margin-top: 60px;
+        margin-left: 0px;
+        width: 400px;
+        height: 230px; 
+    }
+}
 
 .content-point h3 {
     margin-bottom: 10px;
@@ -306,57 +311,7 @@ main {
 }
 
 
-.content-point .right-square {
-    width: 400px;
-    height: 300px;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: rgb(255, 255, 255);
-    margin-left: 640px; 
-    color: #292929;
-    font-family: 'Roboto', 'Helvetica', sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    border-radius: 20px;
-    overflow: hidden;
-}
 
-
-@media (max-width: 768px) {
-    .content-point .right-square {
-        width: 100%; 
-        margin-left: 0; 
-        padding: 10px; 
-    }
-    .content-point .right-square h3 {
-        font-size: 24px;
-        margin-top: 0;
-        margin-bottom: 10px;
-    }
-    .content-point .right-square p{
-        font-size: 14px;
-        line-height: 1.4;
-    }
-}
-
-
-@media (max-width: 480px) {
-    .content-point .right-square {
-        padding: 5px; 
-    }
-    .content-point .right-square h3{
-        font-size: 20px;
-        margin-bottom: 5px;
-    }
-    .content-point .right-square p {
-        font-size: 12px;
-        line-height: 1.3;
-    }
-}
 
 
 .contact-container {
